--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jacob Graven | <br\>Personal Website</title>
+  <title>Jacob Graven | Personal Website</title>
 </head>
   
 </html>
