--- a/index.html
+++ b/index.html
@@ -1,8 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jacob Graven | Personal Website</title>
+  <title>Jacob Graven</title>
+  <meta charset="utf-8">
+  <meta name="author" content="Jacob Graven">
+  <meta name="description" content="Website portfolio for Jacob Graven">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script src="js/script.js"></script>
 </head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#intro">Home</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#education">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
   
-</html>
+  <!-- TODO -->
+  <main>
+    <section id="intro">
+      <h1><span id="intro-text">Hi Mom!</span></h1>
+    </section>
 
+    <section id="experience">
+      <h2>Experience</h2>
+    </section>
+
+    <section id="education">
+      <h2>Education</h2>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+    </section>
+  </main>
+  <footer>
+    <div class="github-link">
+      <a href="https://github.com/your-username" target="_blank">
+        <img src="github-icon.png" alt="GitHub" />
+      </a>
+    </div>
+  </footer>
+</body>
+</html>
