--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- TODO -->
   <main>
     <section id="intro">
-      <h1><span id="intro-text">Welcome to my portfolio (warning: JS is disabled)</span></h1>
+      <h1><span id="intro-text">Welcome to my portfolio!</span></h1>
     </section>
 
     <section id="experience">
