--- a/index.html
+++ b/index.html
@@ -1,54 +1,111 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Jacob Graven</title>
-  <meta charset="utf-8">
-  <meta name="author" content="Jacob Graven">
-  <meta name="description" content="Website portfolio for Jacob Graven">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <script src="js/script.js"></script>
+  <title>Jacob Graven | Personal Portfolio</title>
+  <meta charset="utf-8" />
+  <meta name="keywords" content="portfolio, graven, jacob graven" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="author" content="Jacob Graven" />
+  <meta name="description" content="Online portfolio for Jacob Graven" />
+  <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="css/carousel-styles.css" />
+
+  <script src="js/navbar.js"></script>
+  <script src="js/carousel.js"></script>
+  <script src="js/animation.js"></script>
+
+  <style>
+
+  </style>
+
 </head>
+
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="#intro">Home</a></li>
+        <li><a href="#welcome">Home</a></li>
         <li><a href="#experience">Experience</a></li>
-        <li><a href="#education">Experience</a></li>
+        <li><a href="#education">Education</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
-  
-  <!-- TODO -->
+
   <main>
-    <section id="intro">
-      <h1><span id="intro-text">Welcome to my portfolio!</span></h1>
+    <section id="welcome">
+      <h1 id="welcome-text-type">Welcome to my portfolio! &#128516</h1>
+      <h3 id="welcome-text-fade">&#128128;</h3>
+      <!-- TODO -->
     </section>
 
     <section id="experience">
-      <h2>Experience</h2>
+      <h2>Experience and Skills</h2>
+      <!-- TODO -->
     </section>
 
     <section id="education">
       <h2>Education</h2>
+      <!-- TODO -->
     </section>
 
     <section id="projects">
+      <!-- TODO (template below)-->
       <h2>Projects</h2>
+      <div class="carousel-container">
+        <div class="carousel-nav">
+          <div class="arrow prev">&#8249;</div>
+          <div class="arrow next">&#8250;</div>
+        </div>
+        <div class="carousel-slide active">
+          <div class="content-box">
+            <h2>Project Placeholder(1)</h2>
+            <p>. . . . .</p>
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="content-box">
+            <h2>Project Placeholder(2)</h2>
+            <p>. . . . .</p>
+          </div>
+        </div>
+        <div class="carousel-slide">
+          <div class="content-box">
+            <h2>Project Placeholder(3)</h2>
+            <p>. . . . .</p>
+          </div>
+        </div>
+      </div>
     </section>
-
+    
     <section id="contact">
       <h2>Contact</h2>
+      <!-- TODO -->
     </section>
   </main>
   <footer>
-    <div class="github-link">
-      <a href="https://github.com/your-username" target="_blank">
-        <img src="github-icon.png" alt="GitHub" />
+    <!-- Icons downloaded from icons8.com -->
+    <div id="github-link">
+      <a href="https://github.com/jacobgraven" target="_blank">
+        <img class="footer-icon" src="assets/icons/icon-github.png" alt="GitHub" />
+      </a>
+    </div>
+
+    <div id="email-link">
+      <a href="mailto:me@jgraven.com">
+        <img class="footer-icon" src="assets/icons/icon-email.png" alt="Email" />
+      </a>
+    </div>
+
+    <div id="cat-link">
+      <a href="https://www.youtube.com/watch?v=7nnmvuC4NLc" target="_blank">
+        <img class="footer-icon" src="assets/icons/icon-cat.png" alt="Cats" />
       </a>
     </div>
   </footer>
 </body>
+
 </html>
