--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 <head>
   <title>Jacob Graven | Personal Portfolio</title>
   <meta charset="utf-8" />
-  <meta name="keywords" content="portfolio, graven, jacob graven" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="author" content="Jacob Graven" />
-  <meta name="description" content="Online portfolio for Jacob Graven" />
-  <link rel="icon" href="assets/icons/favicon.png" type="image/x-icon" />
-  <link rel="stylesheet" type="text/css" href="css/styles.css" />
-  <link rel="stylesheet" type="text/css" href="css/carousel-styles.css" />
+  <meta name="keywords" content="portfolio, graven, jacob graven"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="author" content="Jacob Graven"/>
+  <meta name="description" content="Online portfolio for Jacob Graven"/>
+  <link rel="icon"type="image/x-icon" href="assets/icons/favicon.ico"/>
+  <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+  <link rel="stylesheet" type="text/css" href="css/carousel-styles.css"/>
 
-  <script src="js/navbar.js"></script>
   <script src="js/carousel.js"></script>
-  <script src="js/animation.js"></script>
+  <script src="js/animations.js"></script>
 
   <style>
 
@@ -62,19 +61,19 @@
         </div>
         <div class="carousel-slide active">
           <div class="content-box">
-            <h2>Project Placeholder(1)</h2>
+            <h2>Project Placeholder (1)</h2>
             <p>. . . . .</p>
           </div>
         </div>
         <div class="carousel-slide">
           <div class="content-box">
-            <h2>Project Placeholder(2)</h2>
+            <h2>Project Placeholder (2)</h2>
             <p>. . . . .</p>
           </div>
         </div>
         <div class="carousel-slide">
           <div class="content-box">
-            <h2>Project Placeholder(3)</h2>
+            <h2>Project Placeholder (3)</h2>
             <p>. . . . .</p>
           </div>
         </div>
@@ -90,19 +89,19 @@
     <!-- Icons downloaded from icons8.com -->
     <div id="github-link">
       <a href="https://github.com/jacobgraven" target="_blank">
-        <img class="footer-icon" src="assets/icons/icon-github.png" alt="GitHub" />
+        <img class="footer-icon" src="assets/icons/icon-github.ico" alt="GitHub"/>
       </a>
     </div>
 
     <div id="email-link">
       <a href="mailto:me@jgraven.com">
-        <img class="footer-icon" src="assets/icons/icon-email.png" alt="Email" />
+        <img class="footer-icon" src="assets/icons/icon-email.ico" alt="Email"/>
       </a>
     </div>
 
     <div id="cat-link">
       <a href="https://www.youtube.com/watch?v=7nnmvuC4NLc" target="_blank">
-        <img class="footer-icon" src="assets/icons/icon-cat.png" alt="Cats" />
+        <img class="footer-icon" src="assets/icons/icon-cat.ico" alt="Cats"/>
       </a>
     </div>
   </footer>
