lots of changes

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="author" content="Jacob Graven" />
+  <!--  -->
   <!-- <meta name="description" content="Online portfolio for Jacob Graven" /> -->
   <!-- <meta name="keywords" content="portfolio, graven, jacob graven" /> -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/favicon-data/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-data/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-data/favicon-16x16.png">
   <link rel="manifest" href="assets/icons/favicon-data/site.webmanifest">
-  <!-- <link rel="stylesheet" type="text/css" href="css/styles.css" /> -->
   <link rel="stylesheet" type="text/css" href="css/main-styles.css" />
   <link rel="stylesheet" type="text/css" href="css/carousel-styles.css" />
-  <link rel="stylesheet" type="text/css" href="css/contact.css" />
+  <link rel="stylesheet" type="text/css" href="css/contact-styles.css" />
   <script src="js/carousel.js"></script>
   <script src="js/animations.js"></script>
 </head>
@@ -35,8 +35,9 @@
 
   <main>
     <section id="welcome">
-      <h1 id="welcome-text-type">Welcome to my portfolio! &#128516</h1>
-      <h3 id="welcome-text-fade">&#128128;</h3>
+      <h1>Placeholder</h1>
+      <h1 id="welcome-text-type">Welcome! Enable JS for a better experience.</h1>
+      <h3 id="welcome-text-fade"></h3>
       <!-- TODO -->
     </section>
 
@@ -83,7 +84,7 @@
     </section>
 
     <section id="contact" class="contact-section">
-      <h2>Contact Me</h2>
+      <h2>Contact Form Placeholder</h2>
       <form id="contact-form">
         <div class="form-group">
           <label for="name">Name</label>
