--- a/index.html
+++ b/index.html
@@ -28,34 +28,34 @@
       <div id="link-nav">
         <div id="github-link">
           <a href="https://github.com/jacobgraven" target="_blank">
-            <img class="link-icon" src="../assets/icons/icon-github.svg" alt="GitHub" />
+            <img class="link-icon" src="assets/icons/icon-github.svg" alt="GitHub" />
           </a>
         </div>
 
         <div id="email-link">
           <a href="mailto:me@jgraven.com">
-            <img class="link-icon" src="../assets/icons/icon-email.svg" alt="Email" />
+            <img class="link-icon" src="assets/icons/icon-email.svg" alt="Email" />
           </a>
         </div>
 
         <div id="linkedin-link">
           <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-            <img class="link-icon" src="../assets/icons/icon-linkedin.svg" alt="Cats" />
+            <img class="link-icon" src="assets/icons/icon-linkedin.svg" alt="Cats" />
           </a>
         </div>
 
         <div id="cat-link">
           <a href="https://www.youtube.com/watch?v=7nnmvuC4NLc" target="_blank">
-            <img class="link-icon" src="../assets/icons/icon-cat.svg" alt="Cats" />
+            <img class="link-icon" src="assets/icons/icon-cat.svg" alt="Cats" />
           </a>
         </div>
       </div>
     </header>
     <main>
       <section id="welcome">
-        <!-- <div class="header-image"> -->
+        <!-- <div class="header-image"> </div> -->
         <!-- <img class="welcome-img scale-in" src="../assets/images/welcome-image.png" alt="Welcome Image" /> -->
-        <img class="welcome-img" src="../assets/images/image-landing.png" alt="Welcome Kitty Image" />
+        <img class="welcome-img" src="assets/images/image-landing.png" alt="Welcome Kitty Image" />
         <h1 class="welcome-header scale-in" style="font-size: 42px;">Jacob Graven</h1>
         <!-- </div> -->
         <p class="welcome-text slide-in" style="font-size: 28px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -129,25 +129,25 @@
       <!-- Icons downloaded from iconify.design -->
       <div id="github-link">
         <a href="https://github.com/jacobgraven" target="_blank">
-          <img class="link-icon" src="../assets/icons/icon-github.svg" alt="GitHub" />
+          <img class="link-icon" src="assets/icons/icon-github.svg" alt="GitHub" />
         </a>
       </div>
 
       <div id="email-link">
         <a href="mailto:me@jgraven.com">
-          <img class="link-icon" src="../assets/icons/icon-email.svg" alt="Email" />
+          <img class="link-icon" src="assets/icons/icon-email.svg" alt="Email" />
         </a>
       </div>
 
       <div id="linkedin-link">
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-          <img class="link-icon" src="../assets/icons/icon-linkedin.svg" alt="Cats" />
+          <img class="link-icon" src="assets/icons/icon-linkedin.svg" alt="Cats" />
         </a>
       </div>
 
       <div id="cat-link">
         <a href="https://www.youtube.com/watch?v=7nnmvuC4NLc" target="_blank">
-          <img class="link-icon" src="../assets/icons/icon-cat.svg" alt="Cats" />
+          <img class="link-icon" src="assets/icons/icon-cat.svg" alt="Cats" />
         </a>
       </div>
     </footer>
