--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
         <div class="linkedin-link">
           <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-            <img class="link-icon" src="assets/icons/icon-linkedin.svg" alt="Cats" />
+            <img class="link-icon" src="assets/icons/icon-linkedin.svg" alt="LinkedIn" />
           </a>
         </div>
 
         <div class="cat-link">
-          <a href="https://www.youtube.com/watch?v=7nnmvuC4NLc" target="_blank">
-            <img class="link-icon" src="assets/icons/icon-cat.svg" alt="Cats" />
+          <a href="https://www.youtube.com/watch?v=kkwiQmGWK4c" target="_blank">
+            <img class="link-icon" src="assets/icons/icon-cat.svg" alt="Cats (WIP: Cat Website)" />
           </a>
         </div>
       </div>
@@ -57,7 +57,7 @@
       <section id="welcome">
         <img id="landing-img" class="welcome-img slide-in-blurred-top" src="assets/images/image-landing.png" alt="Welcome Kitty Image!" />
         <h1 id="landing-header" class="welcome-header slide-in-bottom scale-in" style="font-size: 42px;">Jacob Graven</h1>
-        <p id="landing-text" class="welcome-text slide-in">ultricies mi quis hendrerit dolor magna eget est lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas integer eget aliquet nibh praesent tristique magna sit amet purus gravida quis blandit turpis cursus in hac habitasse platea dictumst quisque</p>
+        <p id="landing-text" class="welcome-text slide-in">dictum varius duis at consectetur lorem donec massa sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu augue ut lectus arcu bibendum at varius vel pharetra vel turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a cras semper auctor neque vitae tempus quam pellentesque nec nam aliquam sem et tortor consequat id porta nibh venenatis cras sed felis eget velit aliquet sagittis id consectetur purus ut faucibus pulvinar elementum</p>
       </section>
 
       <section id="experience">
