some media queries :^3

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-data/favicon-16x16.png" />
     <link rel="manifest" href="assets/icons/favicon-data/site.webmanifest" />
     <link rel="stylesheet" type="text/css" href="css/main-styles.css" />
-    <link rel="stylesheet" type="text/css" href="css/carousel-styles.css" />
-    <link rel="stylesheet" type="text/css" href="css/contact-styles.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="css/carousel-styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/contact-styles.css" /> -->
     <!-- <script src="js/carousel.js"></script> -->
     <script src="js/animations.js"></script>
 
@@ -56,7 +56,7 @@
     <main>
       <section id="welcome">
         <img id="landing-img" class="welcome-img slide-in-blurred-top" src="assets/images/image-landing.png" alt="Welcome Kitty Image!" />
-        <h1 id="landing-header" class="welcome-header slide-in-bottom scale-in" style="font-size: 42px;">Jacob Graven</h1>
+        <h1 id="landing-header" class="welcome-header slide-in-bottom scale-in">Jacob Graven</h1>
         <p id="landing-text" class="welcome-text slide-in">dictum varius duis at consectetur lorem donec massa sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu augue ut lectus arcu bibendum at varius vel pharetra vel turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a cras semper auctor neque vitae tempus quam pellentesque nec nam aliquam sem et tortor consequat id porta nibh venenatis cras sed felis eget velit aliquet sagittis id consectetur purus ut faucibus pulvinar elementum</p>
       </section>
 
