major responsive updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Jacob Graven | Personal Portfolio</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/favicon-data/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-data/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-data/favicon-16x16.png" />
@@ -13,13 +13,11 @@
     <link rel="stylesheet" type="text/css" href="css/contact-styles.css" /> -->
     <!-- <script src="js/carousel.js"></script> -->
     <script src="js/animations.js"></script>
-
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   </head>
   <body>
     <header>
       <nav id="scroll-nav">
-        <!-- <a class="navbar-link" href="#welcome">Welcome</a> -->
         <a class="navbar-link" href="#experience">Experience</a>
         <a class="navbar-link" href="#education">Education</a>
         <a class="navbar-link" href="#projects">Projects</a>
@@ -27,37 +25,29 @@
       </nav>
 
       <div id="link-nav">
-        <div class="github-link">
-          <a href="https://github.com/jacobgraven" target="_blank">
+          <a id="github-link" href="https://github.com/jacobgraven" target="_blank">
             <img class="link-icon" src="assets/icons/icon-github.svg" alt="GitHub" />
           </a>
-        </div>
 
-        <div class="email-link">
-          <a href="mailto:me@jgraven.com">
+          <a id="email-link" href="mailto:me@jgraven.com">
             <img class="link-icon" src="assets/icons/icon-email.svg" alt="Email" />
           </a>
-        </div>
 
-        <div class="linkedin-link">
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+          <a id="linkedin-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
             <img class="link-icon" src="assets/icons/icon-linkedin.svg" alt="LinkedIn" />
           </a>
-        </div>
 
-        <div class="cat-link">
-          <a href="https://www.youtube.com/watch?v=kkwiQmGWK4c" target="_blank">
+          <a id="cat-link" href="https://www.youtube.com/watch?v=kkwiQmGWK4c" target="_blank">
             <img class="link-icon" src="assets/icons/icon-cat.svg" alt="Cats (WIP: Cat Website)" />
           </a>
-        </div>
       </div>
     </header>
 
     <main>
       <section id="welcome">
         <img id="landing-img" class="welcome-img slide-in-blurred-top" src="assets/images/image-landing.png" alt="Welcome Kitty Image!" />
-        <h1 id="landing-header" class="welcome-header slide-in-bottom scale-in">Jacob Graven</h1>
-        <p id="landing-text" class="welcome-text slide-in">dictum varius duis at consectetur lorem donec massa sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu augue ut lectus arcu bibendum at varius vel pharetra vel turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a cras semper auctor neque vitae tempus quam pellentesque nec nam aliquam sem et tortor consequat id porta nibh venenatis cras sed felis eget velit aliquet sagittis id consectetur purus ut faucibus pulvinar elementum</p>
+        <h1 id="landing-header" class="welcome-header slide-in-bottom">Jacob Graven</h1>
+        <p id="landing-text" class="welcome-text slide-in-bottom">dictum varius duis at consectetur lorem donec massa sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu augue</p>
       </section>
 
       <section id="experience">
