--- a/index.html
+++ b/index.html
@@ -2,27 +2,30 @@
 <html>
 
 <head>
-  <title>Jacob Graven | WebDev Portfolio</title>
+  <title>Jacob Graven︱WebDev & CS</title>
   <meta charset="utf-8" />
   <meta name="author" content="Jacob Graven" />
-  <meta name="description" content="Jacob Graven's web and sofware stuff." />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Jacob Graven's web and sofware stuff" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <meta name="keyword" content="graven, jacob graven, portfolio, webdev, web, web design, software engineer, software engineering, developer" /> -->
 
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/favicon-data/apple-touch-icon.png" />
+  <!-- Favicon Files -->
+  <link rel="apple-touch-icon" sizes="180x180" 
+    href="assets/icons/favicon-data/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" 
     href="assets/icons/favicon-data/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" 
     href="assets/icons/favicon-data/favicon-16x16.png" />
-  <!-- <link rel="manifest" 
-    href="assets/icons/favicon-data/site.webmanifest" /> -->
-  <!-- JS/CSS -->
-  <link rel="stylesheet" href="css/main-styles.css" />
-  <link rel="stylesheet" href="css/contact-styles.css" />
-  <!-- <link rel="stylesheet" href="css/skills-styles.css" /> -->
+  <!-- <link rel="manifest" href="assets/icons/favicon-data/site.webmanifest" /> -->
 
+  <!-- JS / CSS -->
+  <link rel="stylesheet" href="css/main-styles.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
   <script src="js/animations.js"></script>
   <script src="js/carousel.js"></script>
+  <!-- <link rel="stylesheet" href="css/contact-styles.css" /> -->
+  <!-- <link rel="stylesheet" href="css/skills-styles.css" /> -->
+
   <!-- CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
     integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
@@ -30,62 +33,65 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Font and Animation Config -->
+
+  <!-- Font / Animation Config -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" 
-    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" />
   <style>
-    header.animate__animated {
-      --animate-duration: 350ms;
-      --animate-delay: 2.25s;
+    #linkNav,
+    #scrollNav {
+      --animate-duration: 1.1s;
+      --animate-delay: 1.5s;
+      /* --animate-delay: 1.75s; */
     }
 
-    #welcome .animate__animated.animate__fadeInUp {
-      --animate-duration: 1s;
-      --animate-delay: 2.75s;
+    #welcomeSection .animate__animated.animate__fadeInUp {
+      /* --animate-duration: 1s; */
+      /* --animate-delay: 2.75s; */
+      --animate-delay: 3s;
     }
 
-    #welcome p.animate__animated.animate__fadeInUp {
-      --animate-duration: 2s;
-    }
-
-    #welcome h1.animate__animated.animate__fadeInUp {
-      --animate-duration: 1s;
+    #welcomeSection p.animate__animated.animate__fadeInUp {
+      --animate-duration: 1.25s;
+      /* --animate-duration: 2s; */
+      /* --animate-delay: 1s; */
     }
   </style>
 </head>
 
 <body>
-  <header class="animate__animated animate__slideInDown animate__delay-1s">
-    <div id="link-nav">
+  <header>
+    <div id="linkNav" class="animate__animated animate__fadeInDownBig animate__delay-1s">
       <a href="https://github.com/jacobgraven" target="_blank">
         <img class="link-icon" src="assets/icons/icon-github.svg" alt="GitHub" />
       </a>
     </div>
 
-    <nav id="scroll-nav">
-      <a class="navbar-link" href="#education">Education</a>
-      <a class="navbar-link" href="#experience">Experience</a>
-      <a class="navbar-link" href="#projects">Projects</a>
-      <a class="navbar-link" href="#contact">Contact</a>
+    <nav id="scrollNav" class="animate__animated animate__fadeInDownBig animate__delay-1s">
+      <a href="#educationSection">Education</a>
+      <a href="#experienceSection">Experience</a>
+      <a href="#projectSection">Projects</a>
+      <a href="#contactSection">Contact</a>
     </nav>
   </header>
 
   <main>
-    <section id="welcome">
-      <svg id="landing-cat" viewBox="0 0 800 480"
-        xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
-        <g>
-          <path d="M 65.1 399.2 Q 61.7 408.45 68.75 408 C 73.45 401.4 79.2 401.4 82.1 404.35 C 85.95 411.55 65.8 411.4 68.3 410.8 C 69.2 416.4 75 420.05 84 418.45 C 99.7 412.6 115.15 399.7 126.6 386.1 C 144.417 370.721 140.25 354.2 158.9 339.95 M 158.983 339.813 C 173.614 336.693 174.784 360.675 243.9 345.55 C 244.8 341.5 272.4 341.2 296 326.3 C 305.3 316.7 309.95 298.4 296.3 294.65 C 285.1 290 260 314.2 281.05 332.55 C 287.15 340.75 345.3 390.55 482.8 364.2 C 499.15 358.6 520.1 350.45 530.3 338.7 C 541.05 326.95 540 302.4 531.3 299.85 C 527.75 294.75 514.45 292.7 511.4 307 C 511.9 324.9 535.4 346.85 574.75 366.25 C 610.5 381.1 671.8 401.5 723.9 401 C 726.117 405.433 723.4 411.75 737.2 417.85 C 737.2 418.35 747.9 417.85 747.4 412.75 C 742.8 408.65 738.7 402.05 742.8 398.45 C 750.95 398.45 750.45 403.55 748.9 410.2 C 747.9 415.3 768.85 419.9 763.75 404.6 C 768.85 401 754.05 388.25 743.3 386.2 C 650.35 354 607.45 323.35 604.9 292.2 C 601.8 288.1 606.4 277.4 614.05 276.9 C 626.85 277.9 649.85 287.1 670.25 272.3 C 671.3 269.75 672.3 268.7 675.9 259.5 C 677.083 257.633 679.45 251.85 679.45 253.9 C 673.85 245.2 663.6 239.1 662.1 228.85 C 661.6 222.75 668.2 189.55 638.6 179.3 C 629.9 172.65 637.567 151.4 637.05 137.45 C 633.65 140.333 630.25 143.217 626.85 146.1 C 617.15 156.85 616.65 157.85 613.05 173.2 C 612.05 186.45 621.2 193.6 625.3 190.05 C 638.75 174.05 633.5 151.2 636.55 136.9 C 604.35 148.15 591.6 162.45 590.6 179.3 M 590.6 178.8 C 537.45 205.9 490.277 226.383 474.333 228.376 C 386.75 246.25 272.475 212.486 238.63 172.642 C 236.404 171.529 99.218 65.292 114.668 21.269 C 127.823 -13.586 92.284 13.718 92.565 34.705 C 85.35 87.828 179.207 178.748 188.563 188.218 C 226.29 243.976 154.804 320.414 147.7 312.65 C 143.3 311.45 128.6 314.25 128.2 323 C 117.85 354.05 87.15 391.85 76.4 393.85 C 72.683 395.183 68.05 395.05 65.1 399.2" />
-        </g>
-      </svg>
+    <section id="welcomeSection">
+      <div id="svgContainer">
+        <svg id="landingSVG" viewBox="0 0 800 480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+          <g>
+            <path
+              d="M 65.1 399.2 Q 61.7 408.45 68.75 408 C 73.45 401.4 79.2 401.4 82.1 404.35 C 85.95 411.55 65.8 411.4 68.3 410.8 C 69.2 416.4 75 420.05 84 418.45 C 99.7 412.6 115.15 399.7 126.6 386.1 C 144.417 370.721 140.25 354.2 158.9 339.95 M 158.983 339.813 C 173.614 336.693 174.784 360.675 243.9 345.55 C 244.8 341.5 272.4 341.2 296 326.3 C 305.3 316.7 309.95 298.4 296.3 294.65 C 285.1 290 260 314.2 281.05 332.55 C 287.15 340.75 345.3 390.55 482.8 364.2 C 499.15 358.6 520.1 350.45 530.3 338.7 C 541.05 326.95 540 302.4 531.3 299.85 C 527.75 294.75 514.45 292.7 511.4 307 C 511.9 324.9 535.4 346.85 574.75 366.25 C 610.5 381.1 671.8 401.5 723.9 401 C 726.117 405.433 723.4 411.75 737.2 417.85 C 737.2 418.35 747.9 417.85 747.4 412.75 C 742.8 408.65 738.7 402.05 742.8 398.45 C 750.95 398.45 750.45 403.55 748.9 410.2 C 747.9 415.3 768.85 419.9 763.75 404.6 C 768.85 401 754.05 388.25 743.3 386.2 C 650.35 354 607.45 323.35 604.9 292.2 C 601.8 288.1 606.4 277.4 614.05 276.9 C 626.85 277.9 649.85 287.1 670.25 272.3 C 671.3 269.75 672.3 268.7 675.9 259.5 C 677.083 257.633 679.45 251.85 679.45 253.9 C 673.85 245.2 663.6 239.1 662.1 228.85 C 661.6 222.75 668.2 189.55 638.6 179.3 C 629.9 172.65 637.567 151.4 637.05 137.45 C 633.65 140.333 630.25 143.217 626.85 146.1 C 617.15 156.85 616.65 157.85 613.05 173.2 C 612.05 186.45 621.2 193.6 625.3 190.05 C 638.75 174.05 633.5 151.2 636.55 136.9 C 604.35 148.15 591.6 162.45 590.6 179.3 M 590.6 178.8 C 537.45 205.9 490.277 226.383 474.333 228.376 C 386.75 246.25 272.475 212.486 238.63 172.642 C 236.404 171.529 99.218 65.292 114.668 21.269 C 127.823 -13.586 92.284 13.718 92.565 34.705 C 85.35 87.828 179.207 178.748 188.563 188.218 C 226.29 243.976 154.804 320.414 147.7 312.65 C 143.3 311.45 128.6 314.25 128.2 323 C 117.85 354.05 87.15 391.85 76.4 393.85 C 72.683 395.183 68.05 395.05 65.1 399.2" />
+          </g>
+        </svg>
+      </div>
 
-      <h1 id="landing-header" class="welcome-header animate__animated animate__fadeInUp animate__delay-1s">
+      <h1 id="landingHeader" class="animate__animated animate__fadeInUp animate__delay-1s">
         Jacob Graven
       </h1>
 
-      <p id="landing-text" class="welcome-text animate__animated animate__fadeInUp animate__delay-1s">
+      <p id="landingText" class="animate__animated animate__fadeInUp animate__delay-1s">
         dictum varius duis at consectetur lorem donec massa
         sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi
         tincidunt ornare massa eget egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu
@@ -93,80 +99,70 @@
       </p>
     </section>
 
-
-    <section id="education">
-      <div class="edu-bg" data-aos="fade" data-aos-delay="75" data-aos-duration="1250" data-aos-offset="120" data-aos-once="false">
-      <!-- <div class="edu-bg"></div> -->
-
-      <!-- <div class="edu-info" data-aos="fade-right" data-aos-delay="100" data-aos-offset="750" data-aos-once="true"> -->
-      <div class="edu-info" data-aos="fade-right" data-aos-offset="500" data-aos-ease="ease-out-cubic" data-aos-mirror="false">
-        <img src="assets/images/img-ucsd-text.png"/>
-        <p>
-          Computer Science, B.S.<br />
-          Class of 2024
-        </p>
+    <section id="educationSection">
+      <div id="educationBackground" data-aos="fade" data-aos-delay="250" data-aos-duration="1000" data-aos-offset="120" data-aos-once="true">
+        <div id="educationInfo" data-aos="fade-right" data-aos-delay="400" data-aos-offset="500" data-aos-ease="ease-out-cubic" data-aos-once="true">
+          <img src="assets/images/img-ucsd-text.png" />
+          <p>
+            Computer Science (B.S.) 
+            <br /> 
+            Class of 2024
+          </p>
+        </div>
       </div>
     </section>
 
 
-    <section id="experience">
-      <div class="container">
-        <div class="timeline-block timeline-block-right">
-          <div class="marker">2019</div>
+    <section id="experienceSection">
+      <div id="experienceTimeline">              
+          <div class="timeline-entry timeline-entry-right">
+          <div class="timeline-marker">2019</div>
           <div class="timeline-content">
-            <!-- <h3>2019</h3> -->
-            <h3>ThoughtSTEM LLC</h3>
             <h3>Software Engineer Intern</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.</p>
+            <h4>ThoughtSTEM LLC</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.
+            </p>
           </div>
         </div>
 
-        <div class="timeline-block timeline-block-left">
-          <div class="marker">2020</div>
+        <div class="timeline-entry timeline-entry-left">
+          <div class="timeline-marker">2019</div>
           <div class="timeline-content">
-            <!-- <h3>2019</h3> -->
-            <h3>ThoughtSTEM LLC</h3>
             <h3>Code Camp Instructor</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.</p>
+            <h4>ThoughtSTEM LLC</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.
+            </p>
           </div>
         </div>
 
-        <div class="timeline-block timeline-block-right">
-          <div class="marker">2021</div>
+        <div class="timeline-entry timeline-entry-right">
+          <div class="timeline-marker">2021</div>
           <div class="timeline-content">
-            <h3>Third Year</h3>
-            <span>Some magna aliqua</span>
-            <span>Some lorem ipsum</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.</p>
+            <h3>Quantum Wizard</h3>
+            <h4>IDK INC</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.
+            </p>
           </div>
         </div>
-
-        <!-- <div class="timeline-block timeline-block-left">
-          <div class="marker"></div>
-          <div class="timeline-content">
-            <h3>Fourth Year</h3>
-            <span>Some work experience</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea
-              commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
-          </div>
-        </div> -->
       </div>
     </section>
 
-    <section id="projects">
-      <div class="slider-wrapper" id="carousel">
-        <button class="slide-arrow arrow-disabled" id="slide-arrow-prev">
+    <section id="projectSection">
+      <div id="projectCarousel">
+        <button class="slide-arrow arrow-disabled" id="slideArrowPrev">
           &#8249;
         </button>
-        <button class="slide-arrow" id="slide-arrow-next">
+        <button class="slide-arrow" id="slideArrowNext">
           &#8250;
         </button>
-        <div class="slides-container" id="slides-container">
+
+        <div id="slideContainer">
           <div class="slide"></div>
           <div class="slide"></div>
           <div class="slide"></div>
@@ -175,24 +171,23 @@
       </div>
     </section>
 
-    <section id="contact" class="contact-section">
-
+    <section id="contactSection">
     </section>
   </main>
 
   <footer>
-    <!-- Icons downloaded from iconify.design -->
+    <!-- Icon Source: iconfiy.design -->
     <a href="https://github.com/jacobgraven" target="_blank">
       <img class="link-icon" src="assets/icons/icon-github.svg" alt="GitHub" />
     </a>
-    <a id="email-link" href="https://vcard.link/card/DStP" target="_blank">
+    <!-- <a href="https://vcard.link/card/DStP" target="_blank">
       <img class="link-icon" src="assets/icons/icon-email.svg" alt="Email" />
-    </a>
+    </a> -->
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
-      <img class="link-icon" src="assets/icons/icon-linkedin.svg" alt="LinkedIn" />
+      <img class="link-icon" src="assets/icons/icon-linkedin.svg" alt="LinkedIn (WIP)" />
     </a>
     <a href="https://www.youtube.com/watch?v=7nnmvuC4NLc" target="_blank">
-      <img class="link-icon" src="assets/icons/icon-cat.svg" alt="Cats" />
+      <img class="link-icon" src="assets/icons/icon-cat.svg" alt="Cats (WIP)" />
     </a>
   </footer>
 
